# UEvora

./: .directory  .gitignore  README.md
Arquitetura de Sistemas e Computadores I/: .directory  README.md  Trabalho.asm
Arquitetura de Sistemas e Computdaores I/: README.md
Base de Dados/: README.md
MSc/Aprendizagem/: pyproject.toml  rdg1-train.csv
MSc/Aprendizagem/Trabalho 1/datasets/: dropout.csv  slides.csv
MSc/Aprendizagem/Trabalho 1/src/: decision_tree.py
MSc/Aprendizagem/Trabalho 2/: pyproject.toml
MSc/Aprendizagem/Trabalho 2/a_t2/: Untitled.ipynb  lasso_pred.csv  main.ipynb  pred.csv  stacking_pred.csv  voting_pred.csv
MSc/Aprendizagem/Trabalho 2/a_t2/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  lasso_pred-checkpoint.csv  main-checkpoint.ipynb  stacking_pred-checkpoint.csv
MSc/Aprendizagem/Trabalho 2/src/: canopy_heigth.ipynb
MSc/Aprendizagem/Trabalho 2/src/.ipynb_checkpoints/: canopy_heigth-checkpoint.ipynb
MSc/Aprendizagem/aa_t1/: aux.py  decision_tree.py  main.py  node.py  tree.py
MSc/Aprendizagem/datasets/: led-train.csv
MSc/Aprendizagem/src/: decision_tree.py  main.py  node.py  utils.py
MSc/Aprendizagem/tests/: test_aa_t1.py
MSc/Compressão e Codificação de Dados/Praticas/: linear_predictor.ipynb  linear_predictor1.ipynb  nth_order_predictor.py  pyproject.toml  sample.ipynb
MSc/Compressão e Codificação de Dados/Trabalho Final/: b.huffman  b.txt  cenas.py  compress.py  encode.py  extract.py  image_processing.py  image_test.py  lenna.huffman  lenna.pbm  linda.huffman  linda.pbm  main.py  mainV2.py  notas.txt  notas_relatorio.txt  pyproject.toml  sauron.huffman  tree.py  utils.py
MSc/Compressão e Codificação de Dados/Trabalho Final/data_classes/: node.py  tree.py
MSc/Compressão e Codificação de Dados/Trabalho Final/images/: baio.pbm  brunner.pbm  lob.pbm
MSc/Compressão e Codificação de Dados/Trabalho Final/operations/: compress.py  extract.py
(+785 files in other folders)
