[tool.poetry]
name = "aa-t1"
version = "0.1.0"
description = ""
authors = ["TeimasTeimoso <teimas_2010@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.2"
pandas = "^1.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
