[tool.poetry]
name = "praticas"
version = "0.1.0"
description = ""
authors = ["TeimasTeimoso <teimas_2010@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.4.12"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
pandas = "^1.3.3"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
