[tool.poetry]
name = "trabalho final"
version = "0.1.0"
description = "Black and White image compression and decompression using adaptative huffman"
authors = ["TeimasTeimoso <teimas_2010@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
